--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "preact": "^10.19.3"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.8.1",
+    "@types/node": "^20.10.6",
+    "typescript": "^5.3.3",
     "vite": "^6.3.1"
   }
 }
